--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
 	<artifactId>tech-news-java-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>tech-news-java-api</name>
-	<description>Tech news Java API Project</description>
+	<description>Tech News Java API Project</description>
 	<properties>
-		<java.version>19</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -56,13 +56,7 @@
 			<groupId>org.springframework.session</groupId>
 			<artifactId>spring-session-jdbc</artifactId>
 		</dependency>
-        <dependency>
-            <groupId>org.jetbrains</groupId>
-            <artifactId>annotations</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
-        </dependency>
-    </dependencies>
+	</dependencies>
 
 	<build>
 		<plugins>
