--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,12 @@ server.port=8082
 
 spring.datasource.url=jdbc:mysql://localhost:3306/just_tech_news_java_db?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=root112358
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
-spring.session.timeout.seconds=600
+server.servlet.session.timeout=15m
 spring.h2.console.enabled=true
